--- a/profiles/005_syswikipages/managegrp.wiki
+++ b/profiles/005_syswikipages/managegrp.wiki
@@ -1,2 +1,2 @@
 ~tc~This page is system generated. Do not edit manually~/tc~
-{trackerlist trackerId="$profileobject:004_og_tracker:trk_og$" showlinks="n" status="opc" max="1" tpl="tikiorg-managegrp.tpl" force_compile="y"}
+{trackerlist trackerId="$profileobject:004_og_tracker:trk_og$" showlinks="n" status="opc" max="1" tpl="syn-managegrp.tpl" force_compile="y"}
