--- a/profiles/005_syswikipages/creategroup.wiki
+++ b/profiles/005_syswikipages/creategroup.wiki
@@ -11,5 +11,40 @@ creator,hidden={{user}}{DATACHANNEL}/////
 !!Create a New Private {showpref pref=ta_syn_organicgrp_sterm}
 {DATACHANNEL(channel="syn_organicgrp_newprivategroup" buttonLabel="Create" emptyCache="all" returnErrorURI="syn_organicgrp_creategroupfail" returnURI="syn_organicgrp_grouphomepage?itemId=%trkitem_og%&notify=y")}groupname,Name
 groupdescription,Description
+creator,hidden={{user}}{DATACHANNEL}~tc~This page is system generated. Do not edit manually~/tc~
+{HTML()}
+<div class="row">
+<div class="col-lg-9">
+{HTML}
+!Create {showpref pref=ta_syn_organicgrp_sterm}
+{DIV()}
+  <a href="syn_organicgrp_joingroups" class="btn btn-default button-bar">Join {showpref pref=ta_syn_organicgrp_pterm}</a><a href="syn_organicgrp_mygroups" class="btn btn-default">{showpref pref=ta_syn_organicgrp_pterm} I'm In</a>
+{DIV}
+{TABS(name="group_create_tabs" tabs="Public (open to all)|Private (needs approval to join)" toggle="y")}
+{HTML()}
+<div class="col-lg-12">
+{HTML}
+!!Create a New Public {showpref pref=ta_syn_organicgrp_sterm}
+{DATACHANNEL(channel="syn_organicgrp_newpublicgroup" buttonLabel="Create" emptyCache="all" returnErrorURI="syn_organicgrp_creategroupfail" returnURI="syn_organicgrp_grouphomepage?itemId=%trkitem_og%&notify=y")}groupname,Name
+groupdescription,Description
 creator,hidden={{user}}{DATACHANNEL}
+{HTML()}
+</div>
+{HTML}
+/////
+{HTML()}
+<div class="col-lg-12">
+{HTML}
+!!Create a New Private {showpref pref=ta_syn_organicgrp_sterm}
+{DATACHANNEL(channel="syn_organicgrp_newprivategroup" buttonLabel="Create" emptyCache="all" returnErrorURI="syn_organicgrp_creategroupfail" returnURI="syn_organicgrp_grouphomepage?itemId=%trkitem_og%&notify=y")}groupname,Name
+groupdescription,Description
+creator,hidden={{user}}{DATACHANNEL}
+{HTML()}
+</div>
+{HTML}
+{TABS}
+{HTML()}
+</div>
+</div>
+{HTML}
 {TABS}
