--- a/ogprofiles/publicgroup/ogwhiteboard.wiki
+++ b/ogprofiles/publicgroup/ogwhiteboard.wiki
@@ -1,3 +1,3 @@
 {addon package="syn/organicgrp" view="groupnavloader" from="whiteboard"}
 ~tc~ Do not edit above this line to preserve the Group menu ~/tc~
-{WYSIWYG(height="300px")}{WYSIWYG}
+{WYSIWYG(height="300px")}This collaborative whiteboard space is to capture rough notes and ideas as they are being developed. Content that needs to be documented should be copied into Microsoft Word, or similar program, before it is deleted from this space.{WYSIWYG}
