--- a/profiles/005_syswikipages/groupmembers.wiki
+++ b/profiles/005_syswikipages/groupmembers.wiki
@@ -1,4 +1,4 @@
 ~tc~This page is system generated. Do not edit manually~/tc~
 {addon package="syn/organicgrp" view="groupnavloader" from="members"}
-!Members
+!!Members
 {memberlist groups="syn_organicgrp_{{organicgroup}}" readOnly="y"}
