[ENH] Use plugin list instead of member list in members. also adjusted the prefs to use the new addon names

--- a/profiles/005_syswikipages/groupmembers.wiki
+++ b/profiles/005_syswikipages/groupmembers.wiki
@@ -1,4 +1,7 @@
 ~tc~This page is system generated. Do not edit manually~/tc~
 {addon package="syn/organicgrp" view="groupnavloader" from="members"}
 !!Members
-{memberlist groups="syn_organicgrp_{{organicgroup}}" readOnly="y"}
+{LIST()}
+{filter type=user}
+{filter groups="syn_organicgrp_{{organicgroup}}"}
+{LIST}
